--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,14 @@
 server:
   port: 8080
 
-
 spring:
+  thymeleaf:
+    cache: false #关闭缓存
+  devtools:
+    restart:
+      enabled: true  #设置开启热部署
+  freemarker:
+      cache: false #页面不加载缓存，修改即时生效
   datasource:
     name: mysql_test
     type: com.alibaba.druid.pool.DruidDataSource
@@ -32,6 +38,8 @@ spring:
       #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
       pool-prepared-statements: false
       max-pool-prepared-statement-per-connection-size: 20
+
+
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
   mapper-locations: classpath:mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
