--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>spring-boot-test</artifactId>
         </dependency>
 
+        <!--JSR303校验的依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
     </dependencies>
 
